@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libcdatetime],
- [20140211],
+ [20140505],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -63,6 +63,22 @@ AX_LIBCERROR_CHECK_ENABLE
 
 dnl Check for library function support
 AX_LIBCDATETIME_CHECK_LOCAL
+
+dnl Check if DLL support is needed
+AS_IF(
+ [test "x$enable_shared" = xyes],
+ [AS_CASE(
+  [$host],
+  [*cygwin* | *mingw*],
+  [AC_DEFINE(
+   [HAVE_DLLMAIN],
+   [1],
+   [Define to 1 to enable the DllMain function.])
+  AC_SUBST(
+   [HAVE_DLLMAIN],
+   [1])
+  ])
+ ])
 
 dnl Set additional compiler flags
 CFLAGS="$CFLAGS -Wall";
